# infinite-stars-simulation

./: .gitignore  CMakeLists.txt  README.md
src/: events.cpp  events.hpp  globals.hpp  main.cpp  star.cpp  star.hpp
